--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Contact</title>
+  <link rel="stylesheet" href=""
 </head>
 <body>
   <header>
