--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Contact</title>
-  <link rel="stylesheet" href=""
+  <link 
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
